# safe_raytracer

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: Cargo.toml  bvh.rs  constant.rs  encoder.rs  image.h  image.rs  intersect_info.rs  lib.rs  main.cpp  material.rs  matrix.rs  pinhole_camera.rs  ray.rs  renderer.rs  rtao.rs  sampling.rs  scene.rs  shapes.rs  sphere.rs  tests.rs  vec3.h  vec3.rs
src/raytracer/: bvh.rs  intersect_info.rs  ray.rs  rtao.rs  shapes.rs
src/raytracer/shapes/: aabb.rs  obj.rs
src/raytracer/shapes/bsdf/: lambert.rs
src/renderer/: raytracer.rs
src/renderer/raytracer/: bvh.rs  intersect_info.rs  rtao.rs  shapes.rs
src/renderer/raytracer/shapes/: aabb.rs  bsdf.rs  obj.rs  sphere.rs
src/renderer/raytracer/shapes/bsdf/: lambert.rs
src/shapes/: aabb.rs  bsdf.rs  obj.rs  rectangle.rs  sphere.rs  triangle.rs
src/shapes/bsdf/: lambert.rs
src/tests/: mod.rs  vec3.rs
src/vec3/: add.rs  axis.rs  cross.rs  div.rs  mul.rs  sub.rs
