[package]
name = "raytracer"
version = "0.1.0"
authors = ["たた <pf35301@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.13"
num = "0.4.0"
rand = "0.8.0"
tobj = "2.0.4"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false